<resources>
    <string name="app_name">Software</string>
    <string name="bill_management">Bill Management</string>
    <string name="viewBill">View</string>
    <string name="addBill">Add</string>
    <string name="companyName">Barber Shop</string>
    <string name="workers_management">Workers</string>
    <string name="title_activity_add_bill">AddBill</string>
    <string name="add_bill_P">         Add Bill</string>
    <string name="total_price">Total Price</string>
    <string name="employee">Employee</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title_activity_workers__main">Workers_Main</string>
    <string name="add_worker">Add Worker</string>
    <string name="workers_managementM">Workers Management</string>
    <string name="view_workers">View Workers</string>
    <string name="delete">Delete</string>
    <string name="view_bills">View Bills</string>
    <string name="delete_text">Enter Workers ID to Delete</string>
    <string name="id">ID</string>
    <string name="delete_workers">Delete Workers</string>
    <string name="title_activity_add_workers">addWorkers</string>
    <string name="add_workers">Add Workers</string>
    <string name="id_card_number">ID Card Number</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="father_name">Father Name</string>
    <string name="full_name">Full Name</string>
    <string name="workers">Workers</string>
    <string name="filter">Filter</string>
    <string name="title_activity_calculation">Calculation</string>
    <string name="calculate">Calculate</string>
    <string name="stipend">Stipend</string>
    <string name="button">Button</string>
    <string name="today_sales">Today Sales</string>
    <string name="divide">Divide</string>
</resources>
